--- a/pages/blog.html
+++ b/pages/blog.html
@@ -69,11 +69,11 @@
             <div class="row">
                 <div class="col-3 m-auto">
                     <a href="https://xpro.mit.edu/" target="_blank"><img id='mitLogo'
-                            src="../pics/about/mitxPro_logoStacked.jpg" class="img-fluid" alt="MIT xPro Logo."></a>
+                            src="../pics/about/mitxPro_logoStacked.jpg" class="img-fluid" alt="MIT xPRO Logo."></a>
                 </div>
                 <div class="col-9 m-auto">
                     <h3 class="text-center textShadowBlack" style="color:gray;">These are reflections of my experience
-                        during the MIT xPro
+                        during the MIT xPRO
                         Coding Bootcamp.</h3>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                                         src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                     Pete, Apr 23, 2022
                                 </p>
-                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                                         src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                     Pete, Mar 22, 2022
                                 </p>
-                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
                             </div>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
                     <div class="accordion-body">
                         <h4 class="text-center mb-4">Greetings!</h4>
                         <div class='row'>
-                            <p class="col-sm-4">Week 5 of <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a>
+                            <p class="col-sm-4">Week 5 of <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a>
                                 <span class="text-white">Full Stack Coding Bootcamp</span> (full-time cohort), we were
                                 assigned two projects that would be graded towards our <span
                                     class="text-white">Professional Certificate</span>.</p>
@@ -288,7 +288,7 @@
                                         src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                     Pete, Mar 15, 2022
                                 </p>
-                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                                         <h4 class="text-center mb-4">Greetings!</h4>
                                         <div class='m-auto' style="max-width: 480px;">
                                             <div class="h6">
-                                                During week 4 of my <span style="color:white;">MIT xPro Coding
+                                                During week 4 of my <span style="color:white;">MIT xPRO Coding
                                                     Bootcamp</span>, I spent a lot of time on my portfolio.
                                             </div>
                                             <div class="h6">
@@ -479,7 +479,7 @@
                                                     class="profilePic"> -
                                                 Pete, Mar 5, 2022
                                             </p>
-                                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro
+                                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO
                                             </p>
                                         </div>
                                     </div>
@@ -509,7 +509,7 @@
                                     <div class='m-auto' style="max-width: 480px;">
                                         <div class="h6">
                                             Welcome to my third blog post & discussion assignment from the <span
-                                                style="color:white;">MIT xPro
+                                                style="color:white;">MIT xPRO
                                                 Full Stack Coding Bootcamp</span>.
                                         </div>
                                         <div class="h6">
@@ -646,7 +646,7 @@
                                         src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                     Pete, Feb 27, 2022
                                 </p>
-                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
                             </div>
                         </div>
                     </div>
@@ -674,7 +674,7 @@
                             <div class="col-sm-4">
                                 <div style="margin-top:5vw;">
                                     <h4 class="text-center">Hello!</h4>
-                                    This is my second blog post & discussion assignment from the MIT xPro Full Stack
+                                    This is my second blog post & discussion assignment from the MIT xPRO Full Stack
                                     Coding
                                     Bootcamp.
                                     In this Magic Ball challenge, we used HTML, CSS, and JavaScript to create a ball
@@ -702,7 +702,7 @@
                                 <p class="narrowText">Image 1 shows the HTML 'div' for the ball and its style
                                     attributes.
                                     This was
-                                    provided by the MIT xPro
+                                    provided by the MIT xPRO
                                     Bootcamp. I added the 'body' tags since I was using <a
                                         href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a> and
                                     the
@@ -856,7 +856,7 @@
                                     src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                 Pete, Feb 20, 2022
                             </p>
-                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
                         </div>
                     </div>
                 </div>
@@ -951,7 +951,7 @@
                                     src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
                                 Pete, Feb 16, 2022
                             </p>
-                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
                         </div>
                     </div>
                 </div>
@@ -1007,7 +1007,7 @@
                                 src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic">Best
                             Regards,</p>
                         <p style="text-align:end;font-style:italic;padding:0;color:white;">Pete Chu,<br> 9 Feb, 2022</p>
-                        <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
+                        <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPRO</p>
                     </div>
                 </div>
             </div><!-- accodion-item closing div -->
