--- a/pages/projects.html
+++ b/pages/projects.html
@@ -104,7 +104,7 @@
         </div> <!-- row closing div -->
 
         <div class="container-fluid myArticles">
-            <h3>MIT xPro Full Stack Bootcamp Projects</h3>
+            <h3>Bootcamp Projects</h3>
         </div>
 
         <div class="myProjects row container-fluid justify-content-center">
@@ -114,7 +114,7 @@
                     alt="To do dashboard animated gif." style="height:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">To-Do Dashboard</h5>
-                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
                             Bootcamp</span> assignment started as a simple to-do list.</p>
                     <p class="card-text">Customizations: <span>fetching API data</span>
                         with <span>error handling</span>, tasks are
@@ -134,7 +134,7 @@
                     alt="Bus tracker project gif." style="height:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">Real-Time Bus Tracker</h5>
-                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
                             Bootcamp Project</span> uses asynchronous JavaScript functions to fetch API data.</p>
                     <p class="card-text">Custom styling and extra user interface functionality was added, see <a
                             href="../pages/blog.html#blog6Button">blog[6]</a>.</p>
@@ -153,7 +153,7 @@
                     style="width:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">Eye Movement</h5>
-                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
                             Bootcamp Project</span> demonstrates use of 'onmouse' and 'ontouch' event handlers.</p>
                     <p class="card-text"><span>Custom CSS</span> 'aesthetics' and 'typewriter' text was added, see <a
                             href="../pages/blog.html#blog5Button">blog[5]</a>.</p>
@@ -172,7 +172,7 @@
                     alt="Aqua-PacMan animated gif." style="width:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">PacMan Factory</h5>
-                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
                             Bootcamp Project</span> demonstrates use of array methods and DOM manipulation.</p>
                     <p class="card-text"><span>Custom features</span> include an 'Aqua' theme and <em>ZAP!</em> PacMan
                         button, see <a href="../pages/blog.html#blog5Button">blog[5]</a>.</p>
