--- a/pages/projects.html
+++ b/pages/projects.html
@@ -123,7 +123,7 @@
                     <div class="btnContainer">
                         <a id='todoDemo' href="https://codetracklift.github.io/todo/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
-                        <a id='todoRepo' href="https://github.com/codeTrackLift/todo" class="btn btn-secondary btnDark "
+                        <a id='todoRepo' href="https://github.com/codeTrackLift/todo#readme" class="btn btn-secondary btnDark "
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="btnContainer">
                         <a id='busTrackerDemo' href="https://codetracklift.github.io/bustracker/"
                             class="btn btn-secondary" target="_blank">Try Demo</a>
-                        <a id='busTrackerRepo' href="https://github.com/codeTrackLift/bustracker"
+                        <a id='busTrackerRepo' href="https://github.com/codeTrackLift/bustracker#readme"
                             class="btn btn-secondary btnDark " target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -160,7 +160,7 @@
                     <div class="btnContainer">
                         <a id='animatedHeadDemo' href="https://codetracklift.github.io/eyemovement/"
                             class="btn btn-secondary" target="_blank">Try Demo</a>
-                        <a id='animatedHeadRepo' href="https://github.com/codeTrackLift/eyemovement"
+                        <a id='animatedHeadRepo' href="https://github.com/codeTrackLift/eyemovement#readme"
                             class="btn btn-secondary btnDark " target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -179,7 +179,7 @@
                     <div class="btnContainer">
                         <a id='pacManFactoryDemo' href="https://codetracklift.github.io/pacmen_factory/"
                             class="btn btn-secondary" target="_blank">Try Demo</a>
-                        <a id='pacManFactoryRepo' href="https://github.com/codeTrackLift/pacmen_factory"
+                        <a id='pacManFactoryRepo' href="https://github.com/codeTrackLift/pacmen_factory#readme"
                             class="btn btn-secondary btnDark " target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -200,7 +200,7 @@
                         <a id='pacManMiniGameDemo' href="https://codetracklift.github.io/pacman/"
                             class="btn btn-secondary" target="_blank">Play
                             Game</a>
-                        <a id='pacManMiniGameRepo' href="https://github.com/codeTrackLift/pacman"
+                        <a id='pacManMiniGameRepo' href="https://github.com/codeTrackLift/pacman#readme"
                             class="btn btn-secondary btnDark " target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -229,7 +229,7 @@
                         <a id='pomodoroClockDemo' href="https://codetracklift.github.io/pomodoro/"
                             class="btn btn-secondary" target="_blank">Try
                             Demo</a>
-                        <a id='pomodoroClockRepo' href="https://github.com/codeTrackLift/pomodoro"
+                        <a id='pomodoroClockRepo' href="https://github.com/codeTrackLift/pomodoro#readme"
                             class="btn btn-secondary btnDark" target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -250,7 +250,7 @@
                         <a id='markdownPreviewerDemo' href="https://codetracklift.github.io/markdown-previewer/"
                             class="btn btn-secondary" target="_blank">Try
                             Demo</a>
-                        <a id='markdownPreviewerRepo' href="https://github.com/codeTrackLift/markdown-previewer"
+                        <a id='markdownPreviewerRepo' href="https://github.com/codeTrackLift/markdown-previewer#readme"
                             class="btn btn-secondary btnDark" target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -271,7 +271,7 @@
                         <a id='jsCalcDemo' href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary"
                             target="_blank">Try
                             Demo</a>
-                        <a id='jsCalcRepo' href="https://github.com/codeTrackLift/odin-calc"
+                        <a id='jsCalcRepo' href="https://github.com/codeTrackLift/odin-calc#readme"
                             class="btn btn-secondary btnDark" target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -291,7 +291,7 @@
                     <div class="btnContainer">
                         <a id='etchASketchDemo' href="https://codetracklift.github.io/etch-a-sketch/"
                             class="btn btn-secondary" target="_blank">Try Demo</a>
-                        <a id='etchASketchRepo' href="https://github.com/codeTrackLift/etch-a-sketch"
+                        <a id='etchASketchRepo' href="https://github.com/codeTrackLift/etch-a-sketch#readme"
                             class="btn btn-secondary btnDark" target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -311,7 +311,7 @@
                     <div class="btnContainer">
                         <a id='rockPaperScissorsDemo' href="https://codetracklift.github.io/rock-paper-scissors/"
                             class="btn btn-secondary" target="'_blank">Play Game</a>
-                        <a id='rockPaperScissorsRepo' href="https://github.com/codeTrackLift/rock-paper-scissors"
+                        <a id='rockPaperScissorsRepo' href="https://github.com/codeTrackLift/rock-paper-scissors#readme"
                             class="btn btn-secondary btnDark" target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
@@ -334,7 +334,7 @@
                     <div class="btnContainer">
                         <a id='odinLandingpageDemo' href="https://codetracklift.github.io/odin-landingpage/"
                             class="btn btn-secondary" target="'_blank">Visit Site</a>
-                        <a id='odinLandingpageRepo' href="https://github.com/codeTrackLift/odin-landingpage"
+                        <a id='odinLandingpageRepo' href="https://github.com/codeTrackLift/odin-landingpage#readme"
                             class="btn btn-secondary btnDark" target="'_blank"><img
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
