--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,6 +110,25 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width: 18rem;">
+                <img src="../pics/projects/xChangeIco.gif" class="card-img-top mx-auto"
+                    alt="To do dashboard animated gif." style="width:10rem;opacity:0.75;margin-bottom:-6rem;">
+                <img src="../pics/projects/giphyStockTicker.gif" class="card-img-top my-auto"
+                    alt="To do dashboard animated gif." style="padding-bottom:4rem;">
+                <div class="card-body">
+                    <h5 class="card-title">MIT xCHANGE Bank</h5>
+                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
+                            Bootcamp</span> project was customized to include a <span className="text-white">'mock' back-end</span>.</p>
+                    <p class="card-text">Currency exchange data is <span className="text-white">fetched</span> from an <span className="text-white">API</span> and <span className="text-white">rendered</span> in a horizontally scrolling '<span className="text-white">stock ticker</span>.'</p>
+                    <div class="btnContainer">
+                        <a id='xChangeDemo' href="https://codetracklift.github.io/xchange/" class="btn btn-secondary"
+                            target="_blank">Try Demo</a>
+                        <a id='xChangeRepo' href="https://github.com/codeTrackLift/xchange#readme" class="btn btn-secondary btnDark "
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/todoDashboard.gif" class="card-img-top mx-auto pt-4"
                     alt="To do dashboard animated gif." style="height:10rem;">
                 <div class="card-body">
