giphy xCH ticker

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,10 +110,8 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/projects/xChangeIco.gif" class="card-img-top mx-auto"
-                    alt="To do dashboard animated gif." style="width:10rem;opacity:0.75;margin-bottom:-6rem;">
-                <img src="../pics/projects/giphyStockTicker.gif" class="card-img-top my-auto"
-                    alt="To do dashboard animated gif." style="padding-bottom:4rem;">
+                <img src="../pics/projects/giphyxChangeStockTicker.gif" class="card-img-top m-auto"
+                    alt="MIT xChange animated gif with stock ticker.">
                 <div class="card-body">
                     <h5 class="card-title">MIT xCHANGE Bank</h5>
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
