--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,13 +110,13 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/projects/giphyxChangeStockTicker.gif" class="card-img-top m-auto"
+                <img src="../pics/xchange/giphyxChangeStockTicker.gif" class="card-img-top m-auto"
                     alt="MIT xChange animated gif with stock ticker.">
                 <div class="card-body">
                     <h5 class="card-title">MIT xCHANGE Bank</h5>
-                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPRO</a> <span>
-                            Bootcamp</span> project was customized to include a <span className="text-white">'mock' back-end</span>.</p>
-                    <p class="card-text">Currency exchange data is <span className="text-white">fetched</span> from an <span className="text-white">API</span> and <span className="text-white">rendered</span> in a horizontally scrolling '<span className="text-white">stock ticker</span>.'</p>
+                    <p class="card-text">This project was customized to include a <span className="text-white">'mock' back-end</span>.</p>
+                    <p class="card-text">Currency exchange data is <span className="text-white">fetched</span> from an <span className="text-white">API</span> and <span className="text-white">rendered</span> in a horizontally scrolling '<span className="text-white">stock ticker</span>,' see <a
+                        href="../pages/blog.html#blog8Button">blog[8]</a></p>
                     <div class="btnContainer">
                         <a id='xChangeDemo' href="https://codetracklift.github.io/xchange/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
