--- a/pages/blog.html
+++ b/pages/blog.html
@@ -47,7 +47,7 @@
 
     <main id="mainContent">
 
-        <section id="typeWriterSection" class="">
+        <section id="typeWriterSection" class="mb-1">
             <figure id='typeWriter' class="mx-auto">
                 <h2 id="typeWriter1"><span style="color:darkorchid;">const</span> <span
                         style="color:lime">myCodingJourney</span> <span style='color:gray'>=</span> () <span
@@ -83,15 +83,86 @@
 
             <div class="accordion-item">
                 <h2 class="accordion-header">
+                    <button id='blog8Button' onclick="blog8Open()" class="accordion-button collapsed bg-transparent"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseEight"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseEight">
+                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">8</span><span
+                                style='color:dodgerblue'>]</span></h6>
+                        <h5>xCHANGE Stock Ticker</h5>
+                    </button>
+                </h2>
+                <div id="blog8" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingEight">
+                    <div class="accordion-body">
+                        <div class="d-flex justify-content-evenly">
+                            <h4 class="text-center my-auto">Greetings!</h4>
+                            <img src="../pics/xchange/xChangeIco.gif" class="img-fluid p-3 w-25" alt="MIT xCHANGE Logo" style="max-width:8rem;">
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <p>
+                                    <span class="text-white">Full Stack Coding Bootcamp</span> Week 14, our '<span class="menloRegular chocolate">BadBank</span>' project is coming due.  Starter files were supplied, but they utilized CDNs and were in React 17.  As such, I chose to build my project from scratch using '<a href="https://reactjs.org/docs/create-a-new-react-app.html" target="_blank">npx create-react-app</a>' and <span class="chocolate menloRegular">React 18</span>. 
+                                </p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p>
+                                    <span class="cornflowerBlue">Project requirements</span>: styled navbar and homepage, account creation, deposits and withdrawals, user data, and input validation.  See <span class="text-white">video</span> below for a <span class="text-white">walkthrough</span>, or my <a href="https://github.com/codeTrackLift/xchange#readme" target="_blank">GitHub Readme</a> for details and customizations.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-5 col-sm-6">
+                                <p>
+                                    I wanted to integrated a <span class="cornflowerBlue">currency exchange theme</span> but with an <span class="text-white">MIT xPRO twist</span>.  Thus, the <span class="chocolate menloRegular">MIT xCHANGE</span> was born!  Currency exchange rates are fetched from <a href="https://www.coingecko.com/" target="_blank">CoinGecko</a>, then rendered into horizontally scrolling span elements. 
+                                </p>
+                            </div>
+                            <div class="col-md-5 col-sm-6">
+                                <p>
+                                    I used '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect" target="_blank">getBoundingClientRect</a>' to get control of the DOM area.  Then I used '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollWidth" target="_blank">scrollWidth</a>', '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollLeft">scrollLeft</a>', and '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollTo" target="_blank">scrollTo</a>' to implement movement of the scrollbar.  Check out the deployed demo on my <a href="../pages/projects.html">Projects</a> page and let me know what you think!
+                                </p>
+                            </div>
+                            <div class="col-md-2 my-auto">
+                                <img src="../pics/xchange/qrxChange.png" class="img-fluid p-2 d-none d-sm-none d-md-block" alt="MIT xCHANGE QR Code">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6 my-auto">
+                                <iframe id='blog8Video' class='container-fluid ratio-16x9' src="https://youtube.com/embed/qeuvfEmJ7_s" frameborder="0" allowfullscreen>
+                                </iframe>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="fs-5 text-end d-none d-sm-none d-md-block">Check out the MIT xCHANGE on mobile!</p>
+                            </div>
+                        </div>
+                        <div class="'container-fluid row">
+                            <div class="col-sm-6 my-3">
+                                <img src="../pics/xchange/giphyStockTicker.gif" alt="Currency exchange stock ticker animated gif." class="img-fluid my-auto">
+                            </div>
+                            <div class="my-auto col-sm-6">
+                                <div class="text-end">
+                                    <p>Happy coding!</p>
+                                </div>
+                                <p style="text-align:end;font-style:italic;color:white;"><img
+                                        src="../pics/about/profilepic.gif" alt="Picture of Pete" class="profilePic"> -
+                                    Pete, May 13, 2022
+                                </p>
+                                <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPRO</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- accodion-item closing div -->
+
+            <div class="accordion-item">
+                <h2 class="accordion-header">
                     <button id='blog7Button' onclick="blog7Open()" class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
-                        aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSeven"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseSeven">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">7</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>To-Do Dashboard</h5>
                     </button>
                 </h2>
-                <div id="blog7" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div id="blog7" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSeven">
                     <div class="accordion-body">
                         <h4 class="text-center mb-4">Greetings!</h4>
                         <div class="row">
@@ -149,14 +220,14 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog6Button' onclick="blog6Open()" class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
-                        aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseSix">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">6</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>Real-Time Bus Tracker</h5>
                     </button>
                 </h2>
-                <div id="blog6" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div id="blog6" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
                     <div class="accordion-body">
                         <h4 class="text-center mb-4">Greetings!</h4>
                         <div class="row">
@@ -228,14 +299,14 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog5Button' onclick="blog5Open()" class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
-                        aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseFive">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">5</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>PacMan Factory & Eye Movement</h5>
                     </button>
                 </h2>
-                <div id="blog5" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div id="blog5" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
                     <div class="accordion-body">
                         <h4 class="text-center mb-4">Greetings!</h4>
                         <div class='row'>
@@ -298,14 +369,14 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog4Button' onclick="blog4Open()" class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
-                        aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">4</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>Custom CSS Typewriter</h5>
                     </button>
                 </h2>
-                <div id="blog4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div id="blog4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                     <div class="accordion-body">
                         <div class="'container-fluid row">
                             <div class="'container-fluid row">
@@ -493,14 +564,14 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog3Button' onclick="blog3Open()" class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
-                        aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">3</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>PacMan Mini-Game</h5>
                     </button>
                 </h2>
-                <div id="blog3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div id="blog3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                     <div class="accordion-body">
                         <div class="'container-fluid row">
                             <div class="col-sm-7">
@@ -865,15 +936,15 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog1Button' onclick="blog1Open()" class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
-                        aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+                        aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">1</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>Creating a GitHub Website</h5>
                     </button>
                 </h2>
                 <div id="blog1" class="accordion-collapse collapse bg-transparent"
-                    aria-labelledby="panelsStayOpen-headingThree">
+                    aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <h4>Hello World!</h4>
                         <p style="color:white;">Pun intended. &#128516;</p>
@@ -960,15 +1031,15 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog0Button' onclick='blog0Open()' class="accordion-button collapsed bg-transparent"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
-                        aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseZero"
+                        aria-expanded="false" aria-controls="panelsStayOpen-collapseZero">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">0</span><span
                                 style='color:dodgerblue'>]</span></h6>
                         <h5>Coding Bootcamp Introduction</h5>
                     </button>
                 </h2>
                 <div id="blog0" class="accordion-collapse collapse bg-transparent"
-                    aria-labelledby="panelsStayOpen-headingThree">
+                    aria-labelledby="panelsStayOpen-headingZero">
                     <div class="accordion-body">
                         <p>Hello!</p>
                         <p>My name is Pete Chu and I have been a professional in the Pharmaceutical industry for the
