blog8 cfb p to white

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -105,14 +105,14 @@
                             </div>
                             <div class="col-sm-6">
                                 <p>
-                                    <span class="cornflowerBlue">Project requirements</span>: styled navbar and homepage, account creation, deposits and withdrawals, user data, and input validation.  See <span class="text-white">video</span> below for a <span class="text-white">walkthrough</span>, or my <a href="https://github.com/codeTrackLift/xchange#readme" target="_blank">GitHub Readme</a> for details and customizations.
+                                    <span class="text-white">Project requirements</span>: styled navbar and homepage, account creation, deposits and withdrawals, user data, and input validation.  See <span class="text-white">video</span> below for a <span class="text-white">walkthrough</span>, or my <a href="https://github.com/codeTrackLift/xchange#readme" target="_blank">GitHub Readme</a> for details and customizations.
                                 </p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-5 col-sm-6">
                                 <p>
-                                    I wanted to integrated a <span class="cornflowerBlue">currency exchange theme</span> but with an <span class="text-white">MIT xPRO twist</span>.  Thus, the <span class="chocolate menloRegular">MIT xCHANGE</span> was born!  Currency exchange rates are fetched from <a href="https://www.coingecko.com/" target="_blank">CoinGecko</a>, then rendered into horizontally scrolling span elements. 
+                                    I wanted to integrated a <span class="text-white">currency exchange theme</span> but with an <span class="text-white">MIT xPRO twist</span>.  Thus, the <span class="chocolate menloRegular">MIT xCHANGE</span> was born!  Currency exchange rates are fetched from <a href="https://www.coingecko.com/" target="_blank">CoinGecko</a>, then rendered into horizontally scrolling span elements. 
                                 </p>
                             </div>
                             <div class="col-md-5 col-sm-6">
