--- a/pages/contact.html
+++ b/pages/contact.html
@@ -104,6 +104,11 @@
                             src="../pics/contact/Twitter_social_icons-circle-white.png" alt="Twitter Logo"></a>
                     <h6 class="my-auto">@codeTrackLift</h6>
                 </div>
+                <div class="d-flex gap-3">
+                    <a href="https://www.youtube.com/channel/UCVDOFoM5NXYrPoC02lbNJ-Q" target="_blank"><img class='img-fluid contactLogoSquare p-1'
+                            src="../pics/contact/yt_logo.gif" alt="YouTube Logo"></a>
+                    <h6 class="my-auto">@codeByPete</h6>
+                </div>
             </div>
 
         </div>
