--- a/pages/blog.html
+++ b/pages/blog.html
@@ -112,7 +112,7 @@
                         <div class="row">
                             <div class="col-md-5 col-sm-6">
                                 <p>
-                                    I wanted to integrated a <span class="text-white">currency exchange theme</span> but with an <span class="text-white">MIT xPRO twist</span>.  Thus, the <span class="chocolate menloRegular">MIT xCHANGE</span> was born!  Currency exchange rates are fetched from <a href="https://www.coingecko.com/" target="_blank">CoinGecko</a>, then rendered into horizontally scrolling span elements. 
+                                    I wanted to integrate a <span class="text-white">currency exchange theme</span> but with an <span class="text-white">MIT xPRO twist</span>.  Thus, the <span class="chocolate menloRegular">MIT xCHANGE</span> was born!  Currency exchange rates are fetched from <a href="https://www.coingecko.com/" target="_blank">CoinGecko</a>, then rendered into horizontally scrolling span elements. 
                                 </p>
                             </div>
                             <div class="col-md-5 col-sm-6">
