--- a/pages/blog.html
+++ b/pages/blog.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="col-md-5 col-sm-6">
                                 <p>
-                                    I used '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect" target="_blank">getBoundingClientRect</a>' to get control of the DOM area.  Then I used '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollWidth" target="_blank">scrollWidth</a>', '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollLeft">scrollLeft</a>', and '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollTo" target="_blank">scrollTo</a>' to implement movement of the scrollbar.  Check out the deployed demo on my <a href="../pages/projects.html">Projects</a> page and let me know what you think!
+                                    I used '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect" target="_blank">getBoundingClientRect</a>' to get control of the DOM area.  Then I used '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollWidth" target="_blank">scrollWidth</a>', '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollLeft" target="_blank">scrollLeft</a>', and '<a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollTo" target="_blank">scrollTo</a>' to implement movement of the scrollbar.  Check out the deployed demo on my <a href="../pages/projects.html">Projects</a> page and let me know what you think!
                                 </p>
                             </div>
                             <div class="col-md-2 my-auto">
