--- a/pages/projects.html
+++ b/pages/projects.html
@@ -233,7 +233,7 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/pomodoroClock.jpg" style='width:12rem;' class="card-img-top m-auto"
+                <img src="../pics/projects/pomodoroClock.jpg" style='width:12rem;' class="card-img-top img-fluid mx-auto"
                     alt="Pomodoro Clock React App">
                 <div class="card-body">
                     <h5 class="card-title">Pomodoro Clock</h5>
@@ -254,7 +254,7 @@
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/markdownPreviewer.jpg" class="card-img-top pt-4"
+                <img src="../pics/projects/markdownPreviewer.jpg" class="card-img-top img-fluid"
                     alt="Markdown Previewer React App">
                 <div class="card-body">
                     <h5 class="card-title">Markdown Previewer</h5>
