--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,9 +79,10 @@
                             expansion</span> initiatives.</p>
                     <p class="card-text">This project used HTML, CSS, JavaScript, Bootstrap, and includes <span
                             class="text-white">custom</span> CSS <span class="text-white">animations</span>.</p>
-                    <a id='lenovaincDemo' href="https://www.lenovainc.com/" class="btn btn-secondary mx-auto btnDark"
+                    <a id='lenovaIncDemo' href="https://www.lenovainc.com/" class="btn btn-secondary mx-auto btnDark"
                         target="_blank">Visit Site</a>
                 </div>
+                <cite id='lenovaIncCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -99,6 +100,7 @@
                     <a id='lmnoPhotoDemo' href="https://www.lmnophoto.biz/" class="mx-auto btn btn-secondary"
                         target="_blank">Visit Site</a>
                 </div>
+                <cite id='lmnoPhotoCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
         </div> <!-- row closing div -->
@@ -124,6 +126,7 @@
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='xChangeCite' class="text-center">Developed in May, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -144,6 +147,7 @@
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='todoCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -163,6 +167,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='busTrackerCite' class="text-center">Developed in Mar, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -182,6 +187,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='animatedHeadCite' class="text-center">Developed in Mar, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -201,6 +207,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='pacManFactoryCite' class="text-center">Developed in Mar, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -222,6 +229,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='pacManMiniGameCite' class="text-center">Developed in Feb, 2022</cite>
             </div>
 
         </div> <!-- row closind div -->
@@ -251,6 +259,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='pomodoroClockCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
@@ -272,6 +281,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='markdownPreviewerCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
@@ -293,6 +303,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='jsCalcCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
@@ -313,6 +324,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='etchASketchCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -333,6 +345,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='rockPaperScissorsCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -356,6 +369,7 @@
                                 src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
+                <cite id='odinLandingpageCite' class="text-center">Developed in Dec, 2021</cite>
             </div>
 
         </div> <!-- Row closing div -->
