--- a/pages/projects.html
+++ b/pages/projects.html
@@ -82,7 +82,7 @@
                     <a id='lenovaIncDemo' href="https://www.lenovainc.com/" class="btn btn-secondary mx-auto btnDark"
                         target="_blank">Visit Site</a>
                 </div>
-                <cite id='lenovaIncCite' class="text-center">Developed in Apr, 2022</cite>
+                <cite id='lenovaIncCite' class="text-center">Developed Feb-Apr, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
