proj dev dates xch

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -126,7 +126,7 @@
                             target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> Readme</a>
                     </div>
                 </div>
-                <cite id='xChangeCite' class="text-center">Developed in May, 2022</cite>
+                <cite id='xChangeCite' class="text-center">Developed Apr-May, 2022</cite>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
